# Algoritms-Patterns-Tests

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/JavaTest/: CMakeLists.txt
apps/JavaTest/src/com/shnaider/: Main.java
apps/MyQt/: CMakeLists.txt
apps/MyQt/src/: MyQtMainWindow.cpp  MyQtMainWindow.h
apps/MyQt/ui/: myqt.ui
apps/algorithms/: CMakeLists.txt
apps/algorithms/zero_fill/: CMakeLists.txt  main.cpp
apps/automatic_exception_deduction/: CMakeLists.txt  automatic_exception_deduction.cpp
apps/check_valid/: CMakeLists.txt  main.cpp
apps/classes/: CMakeLists.txt  main.cpp  segments.txt  template_and_virtual.cpp
apps/cpp11/: CMakeLists.txt  default_move_assignment.cpp  move_semantics.cpp
apps/customLiterals/: CMakeLists.txt  main.cpp
apps/embedding/: CMakeLists.txt
apps/embedding/lua/: CMakeLists.txt
apps/embedding/lua/embed_lua_001/: CMakeLists.txt
apps/embedding/python/: CMakeLists.txt
apps/embedding/python/py_embedding_001/: CMakeLists.txt  main.cpp
apps/embedding/python/py_embedding_002/: main.cpp
apps/embedding/python/python_wrapper_001/: CMakeLists.txt  main.cpp
apps/embedding/python/swig_test/: main.c  main.cpp  swig_test.h  test_swig.i
apps/embedding/python/swig_test/cpp_c_part/: shapes.cpp  shapes.h
apps/embedding/python/swig_test/swig_part/: CMakeLists.txt  shapes.i
apps/exceptions/: CMakeLists.txt
apps/exceptions/exception_class/: CMakeLists.txt  main.cpp
apps/exceptions/exception_ptr_boost/: CMakeLists.txt
apps/exceptions/promise_exception_ptr/: CMakeLists.txt  main.cpp
apps/format_class/: CMakeLists.txt  main.cpp
apps/gui/: CMakeLists.txt
apps/gui/MyQt/: CMakeLists.txt
apps/gui/MyQt/src/: main.cpp
apps/gui/fltk/: CMakeLists.txt  main.cpp
apps/highload/: CMakeLists.txt
apps/highload/NOK_reader/: CMakeLists.txt  main.cpp
apps/highload/lcm_finder/: CMakeLists.txt  main.cpp
apps/highload/lcm_generator/: CMakeLists.txt  main.cpp
apps/initializer_list/: CMakeLists.txt  main.cpp
apps/io/: CMakeLists.txt
apps/io/cout2custom/: CMakeLists.txt  main.cpp
apps/io/cout2file/: CMakeLists.txt  main.cpp
apps/io/custom2cin/: CMakeLists.txt  main.cpp
apps/io/file2cin/: CMakeLists.txt  main.cpp
apps/io/resource/: CMakeLists.txt  main.cpp
apps/lua/embed_lua_001/: CMakeLists.txt  main.cpp  test.lua
apps/metaprogramming/: CMakeLists.txt
apps/metaprogramming/make_unique/: CMakeLists.txt  main.cpp
apps/metaprogramming/sfinae_settings_getter/: CMakeLists.txt  main.cpp  test_config.json
apps/metaprogramming/sfinae_stringify/: CMakeLists.txt  main.cpp
apps/metaprogramming/variadic_templates/: CMakeLists.txt  main.cpp
apps/methods_ref_qualifiers/: CMakeLists.txt  methods_ref_qualifiers.cpp
apps/multi_settings/: CMakeLists.txt  main.cpp  test_config.json
apps/multithread_exception/: CMakeLists.txt
apps/multithread_exception/src/: main.cpp
apps/patterns/: CMakeLists.txt  state.cpp  visitor.cpp
apps/patterns/prototype/: CMakeLists.txt
apps/patterns/prototype/src/: main.cpp
apps/patterns/state/: CMakeLists.txt  main.cpp
apps/performance/: CMakeLists.txt
apps/pretty_typeid/: CMakeLists.txt  main.cpp
apps/python/: CMakeLists.txt  config.json  decorator_test.py  orm_in_detail.sqlite3  play_sound.py  pyside_and_matplotlib.py  pyside_swig.py  repr_str_test.py  select_file.py  select_file.pyw  simple_browser.py  sqlite3_test.py  swig_test.py  test.sqlite3  tkinter_001.py  vkontakte_test.py
apps/python/SwigTest/: CMakeLists.txt  SwigFoo.cpp  SwigFoo.h  SwigTest.i
apps/python/data/: test.html
apps/python/image_generator/: CMakeLists.txt  ImageGenerator.cpp  ImageGenerator.h  imagegen.i
apps/python/py_embedding_001/: main.cpp
apps/python/py_embedding_002/: CMakeLists.txt
apps/python/swig/: CMakeLists.txt
apps/python/test-1/: README.md  setup.py  test.py
apps/python/test-1/test/: Person.py  __init__.py  main.py
apps/sorts/general/: CMakeLists.txt  main.cpp
apps/speed_tests/: CMakeLists.txt
apps/speed_tests/vectorVsArray/: CMakeLists.txt  main.cpp
apps/system/: CMakeLists.txt
apps/system/breakpoint_assert/: main.cpp
apps/system/catch_segfault/: CMakeLists.txt  main.cpp
apps/system/print_stack_trace/: CMakeLists.txt  main.cpp
apps/test0001/: CMakeLists.txt
apps/test0001/src/: main.cpp
apps/test_boost_asio/: CMakeLists.txt
apps/test_boost_asio/asio_client_001/: CMakeLists.txt
apps/test_boost_asio/asio_client_001/src/: main.cpp
apps/test_boost_asio/asio_server_001/: CMakeLists.txt
apps/test_boost_asio/asio_server_001/src/: main.cpp
apps/test_boost_asio/echo_sync_sample/: CMakeLists.txt  client.cpp  server.cpp
apps/tests/: CMakeLists.txt  main.cpp
apps/tests/src/: main.cpp
apps/vector_by_rule/: CMakeLists.txt  main.cpp
data/: data
modules/: CMakeLists.txt
modules/test_externC/: CMakeLists.txt
modules/test_externC/src/: Test.cpp  Test.h
modules/test_jni/: CMakeLists.txt
modules/test_jni/src/: Main.cpp  Main.h
